# backlight

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  backlight.desktop  backlight.go  backlight.sh  main.cpp  main.qml  slider.cpp  slider.h
